# my-ef-vibe-studio

./: INSTALL.md  LICENSE  README.md  RELEASE_SIGNING.md  index.html  package-lock.json  package.json  vite.config.ts
.github/scripts/: import-apple-certificate.sh  install-linux-deps.sh  next-version.sh  sign-windows.ps1  stage-release-artifacts.sh  sync-version.sh  verify-macos-artifact.sh
.github/workflows/: ci.yml  release.yml
docs/: PHASE6_CHECKLIST.md  PHASE6_OVERVIEW.md  USER_GUIDE.md
examples/: sample.efvibe-workspace
packs/: ef-core-basics.efvibe-pack  performance-probes.efvibe-pack
scripts/: sync-sample-studio.mjs
src/: App.css  App.tsx  theme.css
src-tauri/: Cargo.toml  efvibe-studio.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: adventureworks-sample.db
src-tauri/resources/sample-studio/: adventureworks.efvibe-workspace
src-tauri/resources/sample-studio/notebooks/: getting-started.efvibe-notebook
src-tauri/resources/sample-studio/queries/: 01-linq-method-syntax.efvibe-query  02-linq-query-syntax.efvibe-query  03-fluent-helper.efvibe-query  04-raw-sql.efvibe-query  05-compare.efvibe-query  06-benchmark.efvibe-query  07-csharp-program.efvibe-query
src-tauri/resources/sample-studio/scripts/: constants.csx  helpers.csx  product-filters.csx
src-tauri/scripts/: linux-postinstall.sh
src-tauri/src/: app_update.rs  commands.rs  daemon.rs  efvibe_version.rs  git.rs  lib.rs  linux_graphics.rs  linux_window.rs  main.rs  path_env.rs  sample_workspace.rs  tool.rs
src/components/: AboutDialog.tsx  AppUpdateDialog.tsx  (+60 more)
(+105 files in other folders)
