[package]
name = "my-ef-vibe-studio"
version = "0.2.10"
description = "MyEFvibe Studio — EF Core database client and LINQ scratchpad"
authors = ["yeahbah"]
edition = "2021"
license = "LicenseRef-MyEFvibe-Studio-1.1"
license-file = "../LICENSE"

[lib]
name = "my_ef_vibe_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
include_dir = "0.7"
tauri-plugin-pty = "0.3.0"
ureq = { version = "2", default-features = false, features = ["tls"] }
dirs = "6"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
gdk = "0.18"
